--- a/project-1/index.html
+++ b/project-1/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Travelocity Website</title>
-    <link rel="stylesheet" href="home1.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
           <nav>
@@ -115,5 +115,150 @@
         <div id="offer">
         <p> Family vacation deals<br> Seize your next unforgottable family vacation</p>
         </div>
+
+ <div class="video">  
+ </div>
+
+
+<div class="bottom">
+ 
+    <h2>Here to help you on the move</h2>
+ 
+   <div class="mybottom">
+    <div>
+      <h4>Change or cancel a trip<i class="fa-solid fa-pen"></i></h4>
+      <p>Make updates to your itinery or cancel a book</p>
+    </div>
+    <div>
+      <h4>Change or cancel a trip<i class="fa-solid fa-pen"></i></h4>
+      <p>Make updates to your itinery or cancel a book</p>
+    </div>
+    <div>
+      <h4>Change or cancel a trip<i class="fa-solid fa-pen"></i></h4>
+      <p>Make updates to your itinery or cancel a book</p>
+    </div>
+   </div>
+</div>
+
+
+
+<div class="travelocity">
+  <div class="t1">
+    <img src="https://a.travel-assets.com/mad-service/footer/marquee/TVLY_App_Footer_v1.jpg" alt="">
+  </div>
+   
+  <div>
+    <h2>Wander Wasily with the Travelocity app</h2>
+    <ul>
+      <li>Get helpful alerts about flight status and gate numbers</li>
+      <li>Access all your travel details,even when offline</li>
+      <li>Easily contact your  hotel by messaging them right in the</li>
+    </ul>
+    <h3>Text yourself a download link</h3>
+    <div class="test">
+      <div>
+        <select name="country-code" id="country-code">
+          <!-- <h2>country-code</h2> -->
+          <option value="USA+1">USA+1</option>
+          <option value="Germany+49">Germany+49</option>
+          <option value="Hong-Kong">Hong-Kong SAR +852</option>
+          <option value="India">India +91</option>
+          <option value="Ireland">Ireland +353</option>
+          <option value="Italy">Italy +39</option>
+          <option value="Japan">Japan +81</option>
+          <option value="maxico">Mexico +52</option>
+          <option value="Netherlands">Netherlands +31</option>
+          <option value="New-Zealand">New Zealand +64</option>
+          <option value="Norway">Norway +47</option>
+          <option value="Phillipines">Philippines +63</option>
+          <option value="Singapore">Singapore +65</option>
+          <option value="South-Korea">South-Korea +82</option>
+          <option value="Spain">Spain +34</option>
+          <option value="Sweden">Sweden +46</option>
+          <option value="Switzerland">Switzerland +41</option>
+          <option value="Taiwan">Taiwan +886</option>
+          <option value="Thailand">Thailand +66</option>
+          <option value="United">United Kingdom +44</option>
+        </select>
+      </div>
+      <div>
+        <input id="input" type="number" placeholder="Phone number">
+      </div>
+      <button id="btn1">Get the app</button>
+     </div>
+     <p>By providing your number, you agree to receivea a one-time automated text message with a link to get the app
+      .
+     </p>
+     
+     
+  </div>
+  <div class="setimg">
+    <img src="https://media.istockphoto.com/id/518484289/photo/close-up-of-qr-code-example.jpg?s=612x612&w=is&k=20&c=9K-Ph_-48M8oTAYIXNtoagh8VCE1kqULJxP2LJUGTtU=" alt="">
+    <h4>Scan the QR code</h4>
+  </div>
+</div>
+
+<!-- HOTEL START -->
+<div class="destination">
+  <h2>Destination ideas to plan your next trip</h2>
+</div>
+
+<!-- HOTEL END -->
+
+
+<!-- footer start -->
+<div id="head">
+  <h3>Expedia group</h3>
+</div>
+
+<footer class="footer">
+   <div class="footer1">
+  <div class="col-1">
+    <h4>Company</h4>
+    <a href="#">About</a>
+    <a href="#">Jobs</a>
+    <a href="#">List your property</a>
+    <a href="#">Partnerships</a>
+    <a href="#">Newsroom</a>
+    <a href="#">Investor Relations</a>
+    <a href="#">Roaming Gnome Store</a>
+    <a href="#">Advertising</a>
+  </div>
+  <!-- end -->
+  <div class="col-2">
+    <h4>Explore</h4>
+    <a href="#">Hotels in United States</a>
+    <a href="#">Vacation Rentals in United States</a>
+    <a href="#">Vacation Packages in United States</a>
+    <a href="#">Domestic Flights</a>
+    <a href="#">Car Rentals in Unites States</a>
+    <a href="#">Travelocity Reviews</a>
+    <a href="#">Travelocity Coupons</a>
+    <a href="#">Unique Place to Stay</a>
+    <a href="#">Travel Blog</a>
+  </div>
+  <!-- end -->
+  <div class="col-3">
+    <h4>Policies</h4>
+    <a href="#">Privacy Policy</a>
+    <a href="#">Terms of Use</a>
+    <a href="#">Verbo Terms and Conditions</a>
+    <a href="#">Accessibility</a>
+    <a href="#">Your Privacy Choices</a>
+  </div>
+  <!-- end -->
+
+  <div class="col-4">
+    <h4>Help</h4>
+    <a href="#">Support</a>
+    <a href="#">Cancel your hotel or vacation rental booking</a>
+    <a href="#">Cancel your flight</a>
+    <a href="#">Refund timelines,policies & progresses</a>
+    <a href="#">Use a Travelocity Coupon</a>
+  </div>
+</div>
+<hr>
+</footer>
+<!-- footer end -->
 </body>
 </html>
